Fixed bugs when using 0 or negatives first, using decimal, and fixed display when string too long. Added delete button and better aproach when dealing with decimals

--- a/style.css
+++ b/style.css
@@ -72,3 +72,7 @@ button {
 #former {
     font-size: 16px;
 }
+
+.decreaseSize {
+    font-size: 24px;
+}
